--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,10 @@ jobs:
       - name: Build with Next.js
         run: npm run build
         env:
-          NEXT_PUBLIC_GISCUS_REPO: ${{ vars.NEXT_PUBLIC_GISCUS_REPO }}
-          NEXT_PUBLIC_GISCUS_REPO_ID: ${{ vars.NEXT_PUBLIC_GISCUS_REPO_ID }}
-          NEXT_PUBLIC_GISCUS_CATEGORY: ${{ vars.NEXT_PUBLIC_GISCUS_CATEGORY }}
-          NEXT_PUBLIC_GISCUS_CATEGORY_ID: ${{ vars.NEXT_PUBLIC_GISCUS_CATEGORY_ID }}
+          NEXT_PUBLIC_GISCUS_REPO: Linguage/Giscus
+          NEXT_PUBLIC_GISCUS_REPO_ID: R_kgDOLxA-eA
+          NEXT_PUBLIC_GISCUS_CATEGORY: Hinbox
+          NEXT_PUBLIC_GISCUS_CATEGORY_ID: DIC_kwDOLxA-eM4CzQMX
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
